unreleased
----------

- add support for py36 and py37 and add py36-dev and py37(nightly) to
  travis builds. Thanks John Vandenberg.


2.4.1
-----

- fix issue380: properly perform substitution again. Thanks Ian
  Cordasco.

2.4.0
-----

- remove PYTHONPATH from environment during the install phase because a
  tox-run should not have hidden dependencies and the test commands will also
  not see a PYTHONPATH.  If this causes unforeseen problems it may be 
  reverted in a bugfix release.  Thanks Jason R. Coombs.

- fix issue352: prevent a configuration where envdir==toxinidir and
  refine docs to warn people about changing "envdir". Thanks Oliver Bestwalter and holger krekel.

- fix issue375, fix issue330: warn against tox-setup.py integration as
  "setup.py test" should really just test with the current interpreter. Thanks Ronny Pfannschmidt.

- fix issue302: allow cross-testenv substitution where we substitute
  with ``{x,y}`` generative syntax.  Thanks Andrew Pashkin.

- fix issue212: allow escaping curly brace chars "\{" and "\}" if you need the
  chars "{" and "}" to appear in your commands or other ini values.
  Thanks John Vandenberg.

- addresses issue66: add --workdir option to override where tox stores its ".tox" directory
  and all of the virtualenv environment.  Thanks Danring.

- introduce per-venv list_dependencies_command which defaults
  to "pip freeze" to obtain the list of installed packages.
  Thanks Ted Shaw, Holger Krekel.

- close issue66: add documentation to jenkins page on how to avoid 
  "too long shebang" lines when calling pip from tox.  Note that we 
  can not use "python -m pip install X" by default because the latter 
  adds the CWD and pip will think X is installed if it is there.  
  "pip install X" does not do that.

- new list_dependencies_command to influence how tox determines
  which dependencies are installed in a testenv.

- (experimental) New feature: When a search for a config file fails, tox tries loading